checking backimg fix for desktop on mobile

--- a/src/Category/Category.module.css
+++ b/src/Category/Category.module.css
@@ -240,7 +240,9 @@
 
 }
 
- .section {min-height: 100%};
+ .section {
+  height: 100%
+};
 
 }
 
